--- a/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
+++ b/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
@@ -143,7 +143,7 @@
                         button.disabled = false;
                         span.textContent = originalText;
                         document.querySelector('#TagsToRemove').value = '';
-                        Dashboard.alert('Tags removed successfully!');
+                        Dashboard.alert('Tag removal started, this can take a while if you have a large music library.');
                     }).catch(function(error) {
                         button.disabled = false;
                         span.textContent = originalText;
@@ -172,7 +172,7 @@
                     }).then(function(response) {
                         button.disabled = false;
                         span.textContent = originalText;
-                        Dashboard.alert('Tag processing completed successfully!');
+                        Dashboard.alert('Tag processing started, this can take a while if you have a large music library.');
                     }).catch(function(error) {
                         button.disabled = false;
                         span.textContent = originalText;
