Refine delimiter configuration in README and HTML
- Updated README.md to clarify the treatment of delimiter characters as individual single-character delimiters.
- Enhanced the configuration page to improve user instructions for entering custom delimiters, including examples for better understanding.

--- a/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
+++ b/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
@@ -33,13 +33,13 @@
 
                     <div class="inputContainer">
                         <label class="inputLabel inputLabelUnfocused" for="TagDelimiters">Tag Value Delimiters</label>
-                        <input id="TagDelimiters" name="TagDelimiters" type="text" is="emby-input" placeholder="e.g., ;|\" />
+                        <input id="TagDelimiters" name="TagDelimiters" type="text" is="emby-input" placeholder="e.g., /|;" />
                         <div class="fieldDescription">
                             Custom delimiters for splitting tag values into multiple separate tags.
-                            Enter each delimiter character in sequence (e.g., "/|;\").
+                            Enter each delimiter as a single character in sequence (e.g., <code>/|;</code> for slash, pipe, and semicolon). Each character is treated as a separate delimiter.
                             <br/>
-                            <strong>Example:</strong> If you have "GENRE:Rock;Metal" and configure ";" as a delimiter, 
-                            it will create two tags: "GENRE:Rock" and "GENRE:Metal".
+                            <strong>Example:</strong> If you have <code>GENRE:Rock;Metal</code> and configure <code>;</code> as a delimiter, 
+                            it will create two tags: <code>GENRE:Rock</code> and <code>GENRE:Metal</code>.
                             <br/>
                             Leave empty to disable delimiter splitting.
                         </div>
