--- a/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
+++ b/Jellyfin.Plugin.MusicTags/Configuration/configPage.html
@@ -16,16 +16,16 @@
                         <label class="inputLabel inputLabelUnfocused" for="TagNames">Tag Names to Extract</label>
                         <input id="TagNames" name="TagNames" type="text" is="emby-input" />
                         <div class="fieldDescription">
-                            Comma-separated list of tag names to extract from audio files (e.g., "BPM,KEY"). 
-                            These will be added to Jellyfin as tags in the format "TagName:Value" (e.g., "BPM:141").
+                            Comma-separated list of tag names to extract from audio files (e.g., "GENRE,MOOD,BPM,KEY"). 
+                            These will be added to Jellyfin as tags in the format "TagName:Value" (e.g., "GENRE:Rock", "BPM:141").
                             <br/>
                             <strong>Supported formats:</strong>
                             <br/>
-                            • <strong>Standard ID3 tags:</strong> BPM, Comment, etc.
+                            • <strong>Standard tags:</strong> GENRE, MOOD, BPM, KEY, Comment, etc.
                             <br/>
-                            • <strong>ID3v2 custom frames:</strong> Key, Mood, etc.
+                            • <strong>AcousticBrainz tags:</strong> AB:GENRE, AB:MOOD (if you use MusicBrainz Picard)
                             <br/>
-                            • <strong>Vorbis comments (FLAC/OGG):</strong> Any custom field name.
+                            • <strong>Vorbis comments (FLAC/OGG):</strong> Any custom field name
                             <br/>
                             • <strong>Dynamic extraction:</strong> The plugin will attempt to extract any tag name you specify!
                         </div>
@@ -75,15 +75,17 @@
                     
                     <div class="inputContainer">
                         <label class="inputLabel inputLabelUnfocused" for="TagsToRemove">Tag Names to Remove</label>
-                        <input id="TagsToRemove" name="TagsToRemove" type="text" is="emby-input" placeholder="e.g., BPM,AB:GENRE" />
+                        <input id="TagsToRemove" name="TagsToRemove" type="text" is="emby-input" placeholder="e.g., GENRE,BPM" />
                         <div class="fieldDescription">
                             Comma-separated list of tag names to remove from Jellyfin metadata. Enter just the tag name without the colon and value.
                             <br/>
                             <strong>Examples:</strong>
                             <br/>
+                            • To remove "GENRE:Rock" from all items, enter "GENRE"
+                            <br/>
                             • To remove "BPM:141" from all items, enter "BPM"
                             <br/>
-                            • To remove "AB:GENRE:Rock" from all items, enter "AB:GENRE"
+                            • Works with any tag name including AcousticBrainz tags (e.g., "AB:GENRE")
                             <br/>
                             • <strong>Warning:</strong> This will remove ALL instances of these tag names from your library
                         </div>
